# clad

./: CMakeLists.txt  LICENSE  README.asciidoc  clad.kdev4
doc/: design_ideas.asciidoc
include/clad/: allocator.h  bool.h  etc.h  fatpointer.h  ilist.h  jsmn.h  memory.h  nse.h  platform.h  pool.h  pp.h  sb.h  shared.h  slre.h  test.h  variant.h
src/: allocator.c  etc.c  jsmn.c  memory.c  pool.c  sb.c  slre.c  test.c  variant.c
test/: CMakeLists.txt  test_allocator.c  test_sb.c  test_slre.c  test_test.c
